test/elaboration/bad/typeclass_instance_redeclared_member.mle
class H 'a { x : 'a }
instance H int { x = 42; x = 23 }